# Converse-Framework

./: .gitignore  CHANGELOG.md  Converse-Framework-feedback.md  MIGRATION.md  README.md  feedback.md  improvement_plan.md  improvements.md  plan.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
.harness/: agent.md
.harness/changelogs/: 2026-06-01.md
.harness/docs/: standards.md
.harness/reins/framework-dev/: agent.md
.harness/reins/provider-dev/: agent.md
.harness/reins/tester/: agent.md
.pi-lens/: change-log.jsonl  code-quality-warnings.jsonl  turn-state.json
.pi-lens/cache/: code-quality-warnings.json  code-quality-warnings.meta.json  knip.meta.json  project-snapshot.json  project-snapshot.meta.json  review-graph.json  session-start-guidance.json  session-start-guidance.meta.json  todo-baseline.meta.json  turn-end-findings-last.json  turn-end-findings-last.meta.json  turn-end-findings.meta.json
benchmarks/: perf_compare.py
converse_framework/: __init__.py  audio_utils.py  cuda_utils.py  events.py  pipeline.py  protocols.py  provider_events.py  registry.py  session.py  transport.py  utterance_collector.py
converse_framework/examples/: __init__.py  subprocess_provider.py  text_chat.py  voice_chat.py  websocket_voice_chat.py
converse_framework/js/: browser-voice-client.js  mic-frame-sender.js  speaker-echo-guard.js  tts-audio-player.js
converse_framework/providers/: __init__.py  audio_cpp.py  faster_whisper.py  kokoro_onnx.py  llamacpp.py  mock.py  openai_compat.py  pocket_tts.py  silero.py  unavailable.py  whisper_cpp.py
tests/: test_audio_cpp.py  test_audio_utils.py  test_cuda_utils.py  test_events.py  test_examples.py  test_openai_compat.py  test_pipeline.py  test_protocols.py  test_providers.py  test_registry.py  test_session.py  test_transport.py  test_utterance_collector.py  test_whisper_cpp.py
tests/js/: manual-smoke-test.html  test_helpers.mjs  test_speaker_echo_guard.mjs  test_tts_audio_player.mjs
